...

        <TextView
            android:id="@+id/CurrentJobLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:text="@string/CurrentJobTitle"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

...
                android:padding="10dip"
                android:text="@string/Company"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/CurrentJobCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:hint="@string/CompanyHint"
                android:importantForAutofill="no"
                android:inputType="text" />
...
                android:padding="10dip"
                android:text="@string/Location"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/CurrentJobLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:hint="@string/LocationHint"
                android:importantForAutofill="no"
                android:inputType="text" />
...
                android:padding="10dip"
                android:text="@string/CostOfLivingIndex"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/CurrentJobCostOfLivingIndex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:hint="@string/CostOfLivingIndexHint"
                android:importantForAutofill="no"
                android:inputType="number" />
...
                android:padding="10dip"
                android:text="@string/RemoteWorkTime"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/CurrentJobRemoteWorkTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:hint="@string/RemoteWorkTimeHint"
                android:importantForAutofill="no"
                android:inputType="number" />
...
                android:padding="10dip"
                android:text="@string/YearlySalary"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/CurrentJobYearlySalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:hint="@string/YearlySalaryHint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />
...
                android:padding="10dip"
                android:text="@string/YearlyBonus"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/CurrentJobYearlyBonus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:hint="@string/YearlyBonusHint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />
...
                android:padding="10dip"
                android:text="@string/RetirementBenefits"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/CurrentJobRetirementBenefitsPercentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:hint="@string/RetirementBenefitsHint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />
...
                android:padding="10dip"
                android:text="@string/LeaveTime"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/CurrentJobLeaveTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:hint="@string/LeaveTimeHint"
                android:importantForAutofill="no"
                android:inputType="number" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/CurrentJobSaveButton"
        android:layout_width="140dp"
        android:layout_height="85dp"
        android:text="@string/SaveButton"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/CurrentJobCancelButton" />

    <Button
        android:id="@+id/CurrentJobCancelButton"
        android:layout_width="140dp"
        android:layout_height="85dp"
        android:text="@string/CancelButton"
...
