...
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/MainMenuCurrentJobButton"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/MainMenuCurrentJobButton"
        android:textSize="18sp"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintBottom_toTopOf="@+id/MainMenuJobOfferButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/MainMenuJobOfferButton"
        android:layout_width="300dp"
...
        android:text="@string/MainMenuJobOfferButton"
        android:textSize="18sp"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@+id/MainMenuCurrentJobButton"
        app:layout_constraintBottom_toTopOf="@+id/MainMenuComparisonSettingsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/MainMenuComparisonSettingsButton"
        android:layout_width="300dp"
...
        android:text="@string/MainMenuComparisonSettingsButton"
        android:textSize="18sp"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@+id/MainMenuJobOfferButton"
        app:layout_constraintBottom_toTopOf="@+id/MainMenuCompareJobsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/MainMenuCompareJobsButton"
        android:layout_width="300dp"
...
