...
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/JobOfferUtilAddJobOfferButton"
        android:layout_width="110dp"
        android:layout_height="85dp"
        android:text="@string/AddAnotherOffer"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/JobOfferUtilReturnMainMenuButton" />

    <Button
        android:id="@+id/JobOfferUtilReturnMainMenuButton"
        android:layout_width="110dp"
        android:layout_height="85dp"
        android:text="@string/ReturnToMainMenu"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintStart_toEndOf="@+id/JobOfferUtilAddJobOfferButton"
        app:layout_constraintEnd_toStartOf="@+id/JobOfferUtilCompareWithCurrentButton" />

    <Button
        android:id="@+id/JobOfferUtilCompareWithCurrentButton"
        android:layout_width="110dp"
        android:layout_height="85dp"
        android:text="@string/CompareWithCurrentJob"
...
